Resolved https://github.com/swcarpentry/website/issues/70 Block using "small-n" class were not collapsing at medium brekpoint Now using "medium-n" class for all Left the workshop google calendar with no width. It's now responsive.

--- a/pages/audience.html
+++ b/pages/audience.html
@@ -4,11 +4,11 @@ permalink: /audience/
 title: Our Audience
 ---
 <div class="row">
-  <div class="small-3 columns">
+  <div class="medium-3 columns">
     <h2>Bhadra Basepair</h2>
     <img src="{{site.filesurl}}/cartoons/bhadra_basepair_179x237.png" alt="Bhadra Basepair" />
   </div>
-  <div class="small-9 columns">
+  <div class="medium-9 columns">
     <p>
       Bhadra Basepair received a B.Sc. in biochemistry five years ago.
       She has worked since then for Genes'R'Us,
@@ -54,13 +54,13 @@ title: Our Audience
     </p>
   </div>
 </div>
-    
+
 <div class="row">
-  <div class="small-3 columns">
+  <div class="medium-3 columns">
     <h2>Fan Fullerene</h2>
     <img src="{{site.filesurl}}/cartoons/fan_fullerene_182x254.png" alt="Fan Fullerene" />
   </div>
-  <div class="small-9 columns">
+  <div class="medium-9 columns">
     <p>
       Fan Fullerene is a graduate student in chemistry
       who is working as a lab technician to help cover his costs.
@@ -102,11 +102,11 @@ title: Our Audience
 </div>
 
 <div class="row">
-  <div class="small-3 columns">
+  <div class="medium-3 columns">
     <h2>Helen Helmet</h2>
     <img src="{{site.filesurl}}/cartoons/helen_helmet_156x217.png" alt="Helen Helmet" />
   </div>
-  <div class="small-9 columns">
+  <div class="medium-9 columns">
     <p>
       Helen Helmet,
       a Ph.D. student in mechanical engineering,
@@ -152,11 +152,11 @@ title: Our Audience
 </div>
 
 <div class="row">
-  <div class="small-3 columns">
+  <div class="medium-3 columns">
     <h2>Mehrdad Mapping</h2>
     <img src="{{site.filesurl}}/cartoons/mehrdad_mapping_187x242.png" alt="Mehrdad Mapping" />
   </div>
-  <div class="small-9 columns">
+  <div class="medium-9 columns">
     <p>
       Mehrdad Mapping is a graduate student
       studying bark beetle infestations in the Canadian taiga.
