--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,7 +8,7 @@ title: Frequently Asked Questions
 </div>
 <br/>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <p><a href="#general">General</a></p>
     <ul>
       <li><a href="#what-is-swc">What is Software Carpentry?</a></li>
@@ -37,7 +37,7 @@ title: Frequently Asked Questions
       <li><a href="#buy-stuff">Where can I buy Software Carpentry swag?</a></li>
     </ul>
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <p><a href="#workshops">Workshops</a></p>
     <ul>
       <li><a href="#what-is-workshop">What is a workshop?</a></li>
@@ -75,7 +75,7 @@ title: Frequently Asked Questions
 <h2 id="general">General</h2>
 
 <dl class="faq">
-  
+
   <dt id="what-is-swc">What is Software Carpentry?</dt>
   <dd>
     <p>
