--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -10,7 +10,7 @@ title: Previous Material
   You can <a href="{{site.github_url}}/v4">view its source on GitHub</a>.
 </p>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <table class="table table-striped">
       <tr>
 	<td><a href="{{site.github_io_url}}/v4/vc/index.html">Using Subversion</a></td>
@@ -44,7 +44,7 @@ title: Previous Material
       </tr>
     </table>
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <table class="table table-striped">
       <tr>
 	<td id="invperc"><a href="{{site.github_io_url}}/v4/invperc/index.html">Program Design</a></td>
