--- a/pages/license.html
+++ b/pages/license.html
@@ -6,10 +6,10 @@ title: License
 <h3 id="cc-by">Instructional Material</h3>
 
 <div class="row">
-  <div class="small-2 columns">
+  <div class="medium-2 columns">
     <img src="{{site.filesurl}}/creative-commons-attribution-license.png" />
   </div>
-  <div class="small-10 columns">
+  <div class="medium-10 columns">
     <p>
       All Software Carpentry instructional material is made available under the
       <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
@@ -71,10 +71,10 @@ title: License
 <h3 id="mit">Software</h3>
 
 <div class="row">
-  <div class="small-2 columns">
+  <div class="medium-2 columns">
     <img src="{{site.filesurl}}/osi-approved-license.png" />
   </div>
-  <div class="small-10 columns">
+  <div class="medium-10 columns">
     <p>
       Except where otherwise noted, the example programs and other
       software provided by Software Carpentry are made available under
