--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -4,7 +4,7 @@ permalink: /scf/partners/
 title: Our Partners
 ---
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <p class="imgpar">
       <img src="{{site.filesurl}}/orgs/data-carpentry.png" alt="Data Carpentry" />
       Our sibling organization
@@ -15,7 +15,7 @@ title: Our Partners
       and require little or no prior programming experience.
     </p>
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <p class="imgpar">
       <img src="{{site.filesurl}}/orgs/numfocus.jpg" alt="NumFOCUS" />
       We are very grateful to our fiscal sponsor, <a href="http://numfocus.org">NumFOCUS</a>.
@@ -34,42 +34,42 @@ title: Our Partners
 <h2>Partners</h2>
 
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/compute-canada.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/elixir-uk.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/github.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/iplant.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/leeds.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/michigan.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/rackspace.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/ssi.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/uw-escience.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
   </div>
 </div>
 
@@ -78,42 +78,42 @@ title: Our Partners
 <h2>Affiliates</h2>
 
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/bids.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/lbl.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/michigan-state.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/nesi.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/nlesc.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/ucar.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/uc-davis.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/ucl.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/umelbourne.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
   </div>
 </div>
 
@@ -122,10 +122,10 @@ title: Our Partners
 <h2>Sponsors and Donors</h2>
 
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/insight-data-science.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/rstudio.html %}
   </div>
 </div>
@@ -137,73 +137,73 @@ title: Our Partners
 <p>We are very grateful for the support we have received from:</p>
 
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/continuum.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/enthought.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/indiana-u.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/lanl.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/mathworks.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/microsoft.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/mitacs.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/msl.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/psf.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/qmul.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/scimatic.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/scinet.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/sharcnet.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/sloan.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/ssi.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/utoronto.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     {% include orgs/ukmo.html %}
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
   </div>
 </div>
