--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -21,22 +21,22 @@ title: Workshop Operations
 </p>
 
 <div class="row">
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/host/">Host</a>
   </div>
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/admin/">Admin</a>
   </div>
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/lead/">Lead Instructor</a>
   </div>
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/instructor/">Instructor</a>
   </div>
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/helper/">Helper</a>
   </div>
-  <div class="small-2 columns" align="center">
+  <div class="medium-2 columns" align="center">
     <a href="{{site.baseurl}}/checklists/accessibility/">Accessibility</a>
   </div>
 </div>
@@ -805,17 +805,17 @@ title: Workshop Operations
 <h2 id="on-the-day">The Day of the Workshop</h2>
 
 <p>
-  The host will introduce the instructors and helpers by name, 
-  and remind the learners that everyone teaching/helping 
-  is volunteering their time, 
+  The host will introduce the instructors and helpers by name,
+  and remind the learners that everyone teaching/helping
+  is volunteering their time,
   to help set learners expectations.
-  The host will talk about why the workshop is being held 
-  and the desired outcome.  
+  The host will talk about why the workshop is being held
+  and the desired outcome.
   They'll also let everyone know where to get coffee,
-  whether they can bring drinks and snacks 
+  whether they can bring drinks and snacks
   into the workshop room,
   and where the bathrooms are.
-  The host will also remind learners of the 
+  The host will also remind learners of the
   <a href="{{site.baseurl}}/conduct/">code of conduct</a>.
 </p>
 
