--- a/pages/reading.html
+++ b/pages/reading.html
@@ -6,8 +6,8 @@ title: Reading Material
 <h2>Books</h2>
 
 <div class="row">
-  <div class="small-6 columns">{% include projects/practical-computing-for-biologists.html %}</div>
-  <div class="small-6 columns">{% include projects/eff-phys.html  %}</div>
+  <div class="medium-6 columns">{% include projects/practical-computing-for-biologists.html %}</div>
+  <div class="medium-6 columns">{% include projects/eff-phys.html  %}</div>
 </div>
 
 <h2>Papers</h2>
