More on lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -8,6 +8,8 @@ title: Our Lessons
   You can check the status of each lesson on
   <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>,
   or view the <a href="http://scf.rgaiacs.com/nightly/">nightly build</a>.
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a>,
+  which focus on data organization, cleanup, analysis, and visualization.
 </p>
 <p>
   All of our lessons are freely available under
@@ -105,6 +107,15 @@ title: Our Lessons
     <td><a href="{{site.github_io_url}}/make-novice/reference.html">reference</a></td>
     <td>
       <a href="{{site.baseurl}}/team/#jackson.m">Mike Jackson</a>
+    </td>
+  </tr>
+  <tr id="training">
+    <td>Instructor Training</td>
+    <td><a href="{{site.github_url}}/instructor-training">repo</a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training">site</a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training/reference.html">reference</a></td>
+    <td>
+      <a href="{{site.baseurl}}/team/#wilson.g">Greg Wilson</a>
     </td>
   </tr>
 </table>
