Making new website URL-compatible with old.
1.  Adding `htaccess` (which becomes `.htaccess`) with lots of rewrite rules.
2.  Modifying `pages/scf.html` (which becomes `/scf/`) to link to other documents so that they're not duplicated.

The rewrite rules need careful testing.

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /scf/
 title: The Software Carpentry Foundation
+board_repo: https://github.com/swcarpentry/board/blob/master
 minutes: https://github.com/swcarpentry/board/blob/master/minutes
 ---
 <div align="center">
@@ -51,9 +52,20 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
   The SCF also employs a Program Coordinator to match instructors to workshops,
   handle requests for instructor training,
   and so on.
-  For more information on the SCF,
-  please see <a href="{{site.github_url}}/board">this GitHub repository</a>.
+  For more information on the Foundation's governance,
+  please see the following documents
+  in <a href="{{site.github_url}}/board">this GitHub repository</a>:
 </p>
+
+<ul>
+  <li><a href="{{page.board_repo}}/advisory-council.md">Advisory Council Roles and Responsibilities</a></li>
+  <li><a href="{{page.board_repo}}/committee-roles.md">Steering Committee Roles and Responsibilities</a></li>
+  <li><a href="{{page.board_repo}}/executive-director.md">Executive Director Responsibilities</a></li>
+  <li><a href="{{page.board_repo}}/governance.md">Governance</a></li>
+  <li><a href="{{page.board_repo}}/issue-escalation.md">Issue Escalation</a></li>
+  <li><a href="{{page.board_repo}}/mission-statement.md">Mission Statement</a></li>
+  <li><a href="{{page.board_repo}}/workshops.md">Workshop Fees</a></li>
+</ul>
 
 <h2 id="staff">Staff</h2>
 
