Adding the following redirects from old URLs:
*   /bib/bib.html => /reading/
*   /bib/reading.html => /reading/
*   /blog/archives.html => /blog/archive/
*   /conduct.html => /conduct/
*   /faq.html => /faq/
*   /lessons.html => /lessons/
*   /license.html => /license/
*   /pages/audience.html => /audience/
*   /pages/commenting.html => /commenting/
*   /pages/dashboard.html => /lessons/dashboard/
*   /pages/join.html => /join/
*   /pages/projects.html => /join/help/
*   /pages/team.html => /team/
*   /pages/testimonials.html => /testimonials/
*   /pages/training.html => /join/
*   /scf/advisory-council.html => /scf/
*   /scf/committee-roles.html => /scf/
*   /scf/executive-director.html => /scf/
*   /scf/governance.html => /scf/
*   /scf/history.html => /scf/history/
*   /scf/issue-escalation.html => /scf/
*   /scf/membership.html => /scf/
*   /scf/minutes.html => /scf/
*   /scf/steering-committee.html => /scf/
*   /scf/supporters.html => /scf/partners/
*   /scf/workshops.html => /scf/
*   /workshops/assess/index.html => /workshops/
*   /workshops/assess/post-instructor.html => /workshops/
*   /workshops/assess/post-learner.html => /workshops/
*   /workshops/assess/pre-learner.html => /workshops/
*   /workshops/checklists/accessibility.html => /checklists/accessibility/
*   /workshops/checklists/admin.html => /checklists/admin/
*   /workshops/checklists/helpers.html => /checklists/helpers/
*   /workshops/checklists/host.html => /checklists/host/
*   /workshops/checklists/index.html => /workshops/operations/
*   /workshops/checklists/instructors.html => /checklists/instructor/
*   /workshops/checklists/lead_instructor.html => /checklists/lead_instructor/
*   /workshops/checklists/learners.html => /checklists/learner/
*   /workshops/checklists/travel.html => /checklists/instructor/
*   /workshops/operations.html => /workshops/operations/
*   /workshops/pitch.html => /workshops/pitch/
*   /workshops/previous.html => /workshops/past/
*   /workshops/request.html => /wor

--- a/pages/checklists_accessibility.html
+++ b/pages/checklists_accessibility.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/accessibility/
 title: Accessibility Checklist
+redirect_from:
+  - /workshops/checklists/accessibility.html
 ---
 <p>
   Software Carpentry values the participation of every member of the
