--- a/pages/checklists_admin.html
+++ b/pages/checklists_admin.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/admin/
 title: Admin Checklist
+redirect_from:
+  - /workshops/checklists/admin.html
 ---
 <p>
   Admin is the staff at Software Carpentry's (virtual) headquarters
