--- a/pages/checklists_helper.html
+++ b/pages/checklists_helper.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/helper/
 title: Helper Checklist
+redirect_from:
+  - /workshops/checklists/helpers.html
 ---
 <p>
   Helpers provide assistance to workshop learners during practical sessions.
