--- a/pages/checklists_host.html
+++ b/pages/checklists_host.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/host/
 title: Host Checklist
+redirect_from:
+  - /workshops/checklists/host.html
 ---
 <p>
   A workshop host is a person (or group of people)
