--- a/pages/checklists_instructor.html
+++ b/pages/checklists_instructor.html
@@ -2,6 +2,9 @@
 layout: page-fullwidth
 permalink: /checklists/instructor/
 title: Instructor Checklist
+redirect_from:
+  - /workshops/checklists/instructors.html
+  - /workshops/checklists/travel.html
 ---
 <p>
   Instructors lecture and lead practical exercises.
