--- a/pages/checklists_lead.html
+++ b/pages/checklists_lead.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/lead/
 title: Lead Instructor Checklist
+redirect_from:
+  - /workshops/checklists/lead_instructor.html
 ---
 <p>
   Along with the
