--- a/pages/commenting.html
+++ b/pages/commenting.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /commenting/
 title: Commenting Policy
+redirect_from:
+  - /pages/commenting.html
 ---
 <p>
   This version of the site commenting policy was posted in November 2015.
