--- a/pages/conduct.html
+++ b/pages/conduct.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /conduct/
 title: Code of Conduct
+redirect_from:
+  - /conduct.html
 ---
 <p>
   Software Carpentry workshops are community events intended for
