--- a/pages/faq.html
+++ b/pages/faq.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /faq/
 title: Frequently Asked Questions
+redirect_from:
+  - /faq.html
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/2013-01-mcgill.png" class="img-responsive" alt="Workshop at McGill University, January 2012" />
