--- a/pages/join.html
+++ b/pages/join.html
@@ -2,6 +2,9 @@
 layout: page-fullwidth
 permalink: /join/
 title: Join Us
+redirect_from:
+  - /pages/join.html
+  - /pages/training.html
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
