--- a/pages/join_helpwanted.html
+++ b/pages/join_helpwanted.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /join/help/
 title: Help Wanted
+redirect_from:
+  - /pages/projects.html
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/burma-2015-slice.jpg" alt="Burma 2015" />
