--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /lessons/
 title: Our Lessons
+redirect_from:
+  - /lessons.html
 ---
 <p>
   Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>.
