--- a/pages/lessons_dashboard.html
+++ b/pages/lessons_dashboard.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /lessons/dashboard/
 title: Development Dashboard
+redirect_from:
+  - /pages/dashboard.html
 ---
 <p>Last rebuilt {{site.data.dashboard.timestamp}}.</p>
 {% for record in site.data.dashboard.records %}
