--- a/pages/license.html
+++ b/pages/license.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /license/
 title: License
+redirect_from:
+  - /license.html
 ---
 <h3 id="cc-by">Instructional Material</h3>
 
