--- a/pages/reading.html
+++ b/pages/reading.html
@@ -2,6 +2,9 @@
 layout: page-fullwidth
 permalink: /reading/
 title: Reading Material
+redirect_from:
+  - /bib/bib.html
+  - /bib/reading.html
 ---
 <h2>Books</h2>
 
