--- a/pages/scf.html
+++ b/pages/scf.html
@@ -3,6 +3,16 @@ layout: page-fullwidth
 permalink: /scf/
 title: The Software Carpentry Foundation
 minutes: https://github.com/swcarpentry/board/blob/master/minutes
+redirect_from:
+  - /scf/advisory-council.html
+  - /scf/committee-roles.html
+  - /scf/executive-director.html
+  - /scf/governance.html
+  - /scf/issue-escalation.html
+  - /scf/membership.html
+  - /scf/minutes.html
+  - /scf/steering-committee.html
+  - /scf/workshops.html
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/2014-capetown-slice.png" alt="Capetown Workshop 2014" />
