--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /scf/history/
 title: The History of Software Carpentry
+redirect_from:
+  - /scf/history.html
 ---
 <div class="row">
   <div class="medium-6 columns">
