--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /scf/partners/
 title: Our Partners
+redirect_from:
+  - /scf/supporters.html
 ---
 <div class="row">
   <div class="medium-6 columns">
