--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /testimonials/
 title: Testimonials
+redirect_from:
+  - /pages/testimonials.html
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/mit-2013-slice.jpg" alt="MIT 2013" />
