--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -4,6 +4,12 @@ permalink: /workshops/
 title: Our Workshops
 map_url: workshops.json
 map_element: map_canvas
+redirect_from:
+  - /workshops/assess/index.html
+  - /workshops/assess/post-instructor.html
+  - /workshops/assess/post-learner.html
+  - /workshops/assess/pre-learner.html
+  - /workshops/setup.html
 ---
 <p>
   A Software Carpentry workshop is hands-on two-day event
