--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -2,6 +2,9 @@
 layout: page-fullwidth
 permalink: /workshops/operations/
 title: Workshop Operations
+redirect_from:
+  - /workshops/operations.html
+  - /workshops/checklists/index.html
 ---
 <p>
   This guide includes
