--- a/pages/workshops_pitch.html
+++ b/pages/workshops_pitch.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /workshops/pitch/
 title: "Pitching a Workshop"
+redirect_from:
+  - /workshops/pitch.html
 ---
 <h2>What is Software Carpentry?</h2>
 <p>
