--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /workshops/request/
 title: Request a Workshop
+redirect_from:
+  - /workshops/request.html
 ---
 <p>
   If would like to host a Software Carpentry workshop at your
