--- a/pages/audience.html
+++ b/pages/audience.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /audience/
 title: Our Audience
+redirect_from:
+  - /pages/audience.html
 ---
 <div class="row">
   <div class="medium-3 columns">
