--- a/pages/checklists_learner.html
+++ b/pages/checklists_learner.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /checklists/learner/
 title: Learner Checklist
+redirect_from:
+  - /workshops/checklists/learners.html
 ---
 <p>
   Learners are attending a workshop to improve their computing skills
