--- a/pages/team.html
+++ b/pages/team.html
@@ -4,6 +4,8 @@ permalink: /team/
 title: Our Team
 map_url: instructors.json
 map_element: map_canvas
+redirect_from:
+  - /pages/team.html
 ---
 <div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
 
