--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -4,6 +4,8 @@ permalink: /workshops/past/
 title: Past Workshops
 map_url: workshops_past.json
 map_element: map_canvas
+redirect_from:
+  - /workshops/previous.html
 ---
 <div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
 
