Linking to Jacobs et al

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -53,6 +53,14 @@ redirect_from:
 
   <li>
     <p>
+      Christian T. Jacobs, Gerard J. Gorman, and Lorraine Craig:
+      "<a href="http://arxiv.org/abs/1505.05425">Experiences with Efficient Methodologies for Teaching Computer Programming to Geoscientists</a>",
+      2015.
+    </p>
+  </li>
+
+  <li>
+    <p>
       Julie Libarkin:
       "<a href="{{site.filesurl}}/papers/libarkin-assessment-report-2012-06.pdf">Software Carpentry Workshop Evaluation</a>",
       June 2012.
