--- a/pages/reading.html
+++ b/pages/reading.html
@@ -96,6 +96,14 @@ redirect_from:
 
   <li>
     <p>
+      Alexandra Simperler and Greg Wilson
+      "<a href="http://arxiv.org/abs/1506.02575">Software Carpentry: Get More Done in Less Time</a>"
+      2015.
+    </p>
+  </li>
+
+  <li>
+    <p>
       Tracy K. Teal, Karen A. Cranston, Hilmar Lapp, Ethan White, Greg Wilson, Karthik Ram, and Aleksandra Pawlik:
       "<a href="http://ijdc.net/index.php/ijdc/article/view/10.1.135">Data Carpentry: Workshops to Increase Data Literacy for Researchers</a>"
       <cite>International Journal of Digital Curation</cite>,
