Damien Irving paper

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -53,8 +53,16 @@ redirect_from:
 
   <li>
     <p>
+      Damien Irving:
+      "<a href="http://journals.ametsoc.org/doi/abs/10.1175/BAMS-D-15-00010.1">A minimum standard for publishing computational results in the weather and climate sciences</a>",
+      2015.
+    </p>
+  </li>
+
+  <li>
+    <p>
       Christian T. Jacobs, Gerard J. Gorman, and Lorraine Craig:
-      "<a href="http://arxiv.org/abs/1505.05425">Experiences with Efficient Methodologies for Teaching Computer Programming to Geoscientists</a>",
+      "<a href="http://arxiv.org/abs/1505.05425">Experiences with efficient methodologies for teaching computer programming to geoscientists</a>",
       2015.
     </p>
   </li>
