--- a/pages/reading.html
+++ b/pages/reading.html
@@ -104,6 +104,15 @@ redirect_from:
 
   <li>
     <p>
+      Ashley Shade and Tracy K. Teal:
+      "<a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4658184/">Computing Workflows for Biologists: A Roadmap</a>"
+      <cite>PLoS Biology</cite>,
+      2015.
+    </p>
+  </li>
+
+  <li>
+    <p>
       Alexandra Simperler and Greg Wilson
       "<a href="http://arxiv.org/abs/1506.02575">Software Carpentry: Get More Done in Less Time</a>"
       2015.
