renamed all includes with html extension

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@ permalink: /index.html
 <div class="row">
   <div class="medium-8 columns">
     <h3>Recent Blog Posts</h3>
-    {% include list-posts entries='10' %}
+    {% include list-posts.html entries='10' %}
   </div>
   <div class="medium-4 columns">
     <h3>Upcoming Workshops</h3>
