--- a/pages/join_donate.html
+++ b/pages/join_donate.html
@@ -11,7 +11,7 @@ title: Donate
   from people like you.
 </p>
 <div align="center">
-  {% include paypal %}
+  {% include paypal.html %}
 </div>
 <p>
   You can also buy everything from maternity shirts to messenger bags
