--- a/pages/index.html
+++ b/pages/index.html
@@ -4,21 +4,21 @@ permalink: /index.html
 ---
 <div class="row">
   <div class="medium-4 columns">
-    <a href="{{site.baseurl}}/workshops/"><img src="{{site.baseurl}}/files/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
+    <a href="{{site.baseurl}}/workshops/"><img src="{{site.baseurl}}/files/workshops/2012-12-uta-2.jpg" alt="University of Texas 2012" /></a>
     <a href="{{site.baseurl}}/workshops/"><h4>Our Workshops ›</h4></a>
     <p>
       Find or host a workshop.
     </p>
   </div>
   <div class="medium-4 columns">
-    <a href="{{site.baseurl}}/lessons/"><img src="{{site.baseurl}}/files/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
+    <a href="{{site.baseurl}}/lessons/"><img src="{{site.baseurl}}/files/workshops/dc-2014-2.jpg" alt="Data Carpentry 2014" /></a>
     <a href="{{site.baseurl}}/lessons/"><h4>Our Lessons ›</h4></a>
     <p>
       Have a look at what we teach.
     </p>
   </div>
   <div class="medium-4 columns">
-    <a href="{{site.baseurl}}/join/"><img src="{{site.baseurl}}/files/workshops/scripps-2012-11.png" alt="Scripps 2012" /></a>
+    <a href="{{site.baseurl}}/join/"><img src="{{site.baseurl}}/files/workshops/scripps-2012-11-2.jpg" alt="Scripps 2012" /></a>
     <a href="{{site.baseurl}}/join/"><h4>Get Involved ›</h4></a>
     <p>
       Help us help researchers.
