Fix Not Found links for checklists
Responding to #103

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -65,20 +65,20 @@ redirect_from:
   </li>
   <li>
     <p>
-      The <a href="{{site.baseurl}}/checklists/instructors/">instructors</a>,
+      The <a href="{{site.baseurl}}/checklists/instructor/">instructors</a>,
       who present the tutorials and lead the practical exercises.
     </p>
   </li>
   <li>
     <p>
-      The <a href="{{site.baseurl}}/checklists/lead_instructor/">lead instructor</a>,
+      The <a href="{{site.baseurl}}/checklists/lead/">lead instructor</a>,
       who is in charge of deciding what will be taught by whom
       and ensuring the teaching aspects of the workshop go smoothly.
     </p>
   </li>
   <li>
     <p>
-      <a href="{{site.baseurl}}/checklists/helpers/">Helpers</a>,
+      <a href="{{site.baseurl}}/checklists/helper/">Helpers</a>,
       who provide assistance during practical sessions,
       update and answer questions on the workshop Etherpad,
       and help with various practical matters.
