--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@ title: About Us
   Since 1998,
   Software Carpentry has been teaching researchers in science, engineering, medicine, and related disciplines
   the computing skills they need to get more done in less time and with less pain.
-  Our <a href="{{site.baseurl}}/pages/team/">volunteer instructors</a>
+  Our <a href="{{site.baseurl}}/team/">volunteer instructors</a>
   have run <a href="{{site.baseurl}}/workshops/previous/">hundreds of events</a>
   for thousands of scientists in the past two and a half years.
   All of our <a href="{{site.baseurl}}/lessons/">lesson materials</a> are freely reusable
