fixing broken link

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ title: About Us
   Software Carpentry has been teaching researchers in science, engineering, medicine, and related disciplines
   the computing skills they need to get more done in less time and with less pain.
   Our <a href="{{site.baseurl}}/team/">volunteer instructors</a>
-  have run <a href="{{site.baseurl}}/workshops/previous/">hundreds of events</a>
+  have run <a href="{{site.baseurl}}/workshops/past/">hundreds of events</a>
   for thousands of scientists in the past two and a half years.
   All of our <a href="{{site.baseurl}}/lessons/">lesson materials</a> are freely reusable
   under the <a href="{{site.baseurl}}/license/#cc-by">Creative Commons - Attribution license</a>.
