--- a/pages/about.html
+++ b/pages/about.html
@@ -27,9 +27,9 @@ title: About Us
     <p>
       Software Carpentry is made possible by the generous support of
       <a href="{{site.baseurl}}/scf/partners/">our partners</a>
-      and by the hard work of <a href="{{site.baseurl}}/join/team/">our volunteers</a>.
+      and by the hard work of <a href="{{site.baseurl}}/join/">our volunteers</a>.
       We offer <a href="{{site.baseurl}}/scf/join/">several levels of institutional engagement</a>,
-      and individuals can <a href="{{site.baseurl}}/join/instructor/">become instructors</a>.
+      and individuals can <a href="{{site.baseurl}}/join">become instructors</a>.
     </p>
   </div>
 
