--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@ title: About Us
       You can <a href="{{site.baseurl}}/workshops/attend/">host a workshop</a>
       or <a href="{{site.baseurl}}/workshops/attend/">attend one</a> that someone else is hosting.
       Our <a href="{{site.baseurl}}/conduct/">code of conduct</a>
-      and <a href="{{site.baseurl}}/workshops/guides/">operations guides</a>
+      and <a href="{{site.baseurl}}/workshops/operations/">operations guides</a>
       describe how our workshops are run,
       and our <a href="{{site.baseurl}}/faq/">answers other questions</a>.
     </p>
