--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@ title: About Us
     <h4>Conversations</h4>
     <p>
       You can <a href="mailto:{{site.contact}}">send us email</a>,
-      <a href="{{site.baseurl}}/join/conversation/">join our mailing lists</a>,
+      <a href="{{site.baseurl}}/join/#discussion">join our mailing lists</a>,
       <a href="{{site.baseurl}}/blog/">read our blog</a>,
       <a href="{{site.data.socialmedia.Twitter.url}}">follow us on Twitter</a>,
       or browse <a href="{{site.data.socialmedia.GitHub}}">our repositories on GitHub</a>.
