--- a/pages/join.html
+++ b/pages/join.html
@@ -35,7 +35,8 @@ title: Join Us
 
 <h2 id="discussion">Conversations</h2>
 <p>
-  You can join the conversation by following <a href="{{site.baseurl}}/blog/">our blog</a>
+  You can join the conversation by following <a href="{{site.baseurl}}/blog/">our blog</a>,
+  <a href="https://swc-slack-invite.herokuapp.com/">on Slack</a>,
   or <a href="{{site.twitter_url}}">{{site.twitter_name}}</a> on Twitter,
   or talk to us on these mailing lists:
 </p>
