Switching the middle image

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@ permalink: /index.html
     </p>
   </div>
   <div class="medium-4 columns">
-    <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
+    <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/diagram.png" alt="Concept Map" /></a>
     <a href="{{site.baseurl}}/lessons/"><h4>Our Lessons ›</h4></a>
     <p>
       Have a look at what we teach.
