Add mentoring list to join page
Close #132.

--- a/pages/join.html
+++ b/pages/join.html
@@ -91,6 +91,23 @@ redirect_from:
     </td>
   </tr>
   <tr>
+    <td>
+      <a href="{{site.mailing_lists}}/mailman/listinfo/mentoring_lists.software-carpentry.org">Mentoring</a>
+    </td>
+    <td>
+      <a href="{{site.mailing_lists}}/pipermail/mentoring_lists.software-carpentry.org/">(archives)</a>
+    </td>
+    <td>
+      Working mailing list of Mentoring Subcommittee.
+    </td>
+    <td>
+      5-20 messages/week
+    </td>
+    <td>
+      moderated
+    </td>
+  </tr>
+  <tr>
     <td colspan="5"><strong>Regional</strong></td>
   </tr>
   <tr>
