--- a/pages/join.html
+++ b/pages/join.html
@@ -108,6 +108,23 @@ redirect_from:
     </td>
   </tr>
   <tr>
+    <td>
+      <a href="{{site.mailing_lists}}/mailman/listinfo/r-discuss_lists.software-carpentry.org">r-discuss</a>
+    </td>
+    <td>
+      <a href="{{site.mailing_lists}}/pipermail/r-discuss_lists.software-carpentry.org/">(archives)</a>
+    </td>
+    <td>
+      Disucssion of our R lesson and related matters.
+    </td>
+    <td>
+      1-5 messages/week
+    </td>
+    <td>
+      unmoderated
+    </td>
+  </tr>
+  <tr>
     <td colspan="5"><strong>Regional</strong></td>
   </tr>
   <tr>
