lesson.html: Switch GitHub and browser icons in instructor training
The icons are reversed and need to be switched.

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -122,8 +122,8 @@ redirect_from:
   </tr>
   <tr id="training">
     <td>Instructor Training</td>
-    <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-github" title="icon-browser"></a></td>
-    <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-browser" title="icon-github"></a></td>
+    <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-browser" title="icon-browser"></a></td>
+    <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.github_io_url}}/instructor-training/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#wilson.g">Greg Wilson</a>
