Added a link to the intermediate R materials

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -239,6 +239,12 @@ redirect_from:
     <td><a href="{{site.github_url}}/web-data-python" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.baseurl}}/team/#wilson.g">Greg Wilson</a></td>
   </tr>
+  <tr>
+    <td>Intermediate/advanced R lessons</td>
+    <td><a href="http://resbaz.github.io/r-intermediate-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
+    <td><a href="https://github.com/resbaz/r-intermediate-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
+    <td><a href="{{site.baseurl}}/team/#ritchie.scott">Scott Ritchie</a></td>
+  </tr>
 </table>
 
 <h2 id="slideshows">Slideshows</h2>
