--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -22,7 +22,7 @@ redirect_from:
 </div>
 
 <table class="table table-striped workshops">
-  {% for w in site.data.amy.workshops_past %}
+  {% for w in site.data.amy.workshops_past reversed %}
   <tr>
     <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' '}}" /></td>
     <td class="link"><a href="{{w.url}}">{{w.venue}}</a></td>
