--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,8 @@ permalink: /index.html
       <strong>
 	The election for the 2016 Steering Committee will take place in the week of February 15-19, 2016.
 	The people below have put themselves forward as candidates,
-	and we will announce online discussion sessions in which you can meet them and ask them questions soon.
+	and will take part in question and answer sessions on February 9, 2016
+	to talk to the community about their candidacy and how they hope to contribute to the future of Software Carpentry.
       </strong>
     </p>
     <table>
