Short notice about the PLoS Git paper

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -26,6 +26,15 @@ redirect_from:
 
   <li>
     <p>
+      John D. Blischak, Emily R. Davenport, and Greg Wilson:
+      "<a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004668">A Quick Introduction to Version Control with Git and GitHub</a>"
+      PLoS Computational Biology,
+      2016.
+    </p>
+  </li>
+
+  <li>
+    <p>
       Matthew Gentzkow and Jesse Shapiro:
       "<a href="https://people.stanford.edu/gentzkow/sites/default/files/codeanddata.pdf">Code and Data for the Social Sciences: A Practitioner's Guide.</a>",
       2014.
