Note for workshop-specific contacts

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -66,6 +66,7 @@ redirect_from:
 
 <div id="future">
   <h2>Future Workshops</h2>
+  <p>For more information about any workshop below, please contact the person listed on that workshop's webpage.  For all general inquiries please <a href="mailto:{{site.contact}}">email us</a>.</p>
   <table class="table table-striped workshops">
     {% for w in site.data.amy.workshops_current %}
     <tr>
