adding unviersity of miami

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -116,6 +116,7 @@ redirect_from:
     {% include orgs/umelbourne.html %}
   </div>
   <div class="medium-6 columns">
+    {% include orgs/umiami.html %}
   </div>
 </div>
 
