Fixing two broken links in 'about' page.
Fixes #215.

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,8 +36,8 @@ title: About Us
   <div class="medium-4 columns">
     <h4>Workshops</h4>
     <p>
-      You can <a href="{{site.baseurl}}/workshops/attend/">host a workshop</a>
-      or <a href="{{site.baseurl}}/workshops/attend/">attend one</a> that someone else is hosting.
+      You can <a href="{{site.baseurl}}/workshops/request/">host a workshop</a>
+      or <a href="{{site.baseurl}}/workshops/">attend one</a> that someone else is hosting.
       Our <a href="{{site.baseurl}}/conduct/">code of conduct</a>
       and <a href="{{site.baseurl}}/workshops/operations/">operations guides</a>
       describe how our workshops are run,
