--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -13,65 +13,65 @@ title: Previous Material
   <div class="medium-6 columns">
     <table class="table table-striped">
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/vc/index.html">Using Subversion</a></td>
+	<td><a href="{{site.v4_url}}/vc/index.html">Using Subversion</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/shell/index.html">The Unix Shell</a></td>
+	<td><a href="{{site.v4_url}}/shell/index.html">The Unix Shell</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/python/index.html">Programming in Python</a></td>
+	<td><a href="{{site.v4_url}}/python/index.html">Programming in Python</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/test/index.html">Testing</a></td>
+	<td><a href="{{site.v4_url}}/test/index.html">Testing</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/setdict/index.html">Sets and Dictionaries</a></td>
+	<td><a href="{{site.v4_url}}/setdict/index.html">Sets and Dictionaries</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/regexp/index.html">Regular Expressions</a></td>
+	<td><a href="{{site.v4_url}}/regexp/index.html">Regular Expressions</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/databases/index.html">Databases</a></td>
+	<td><a href="{{site.v4_url}}/databases/index.html">Databases</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/access/index.html">Using Access</a></td>
+	<td><a href="{{site.v4_url}}/access/index.html">Using Access</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/data/index.html">Data Management</a></td>
+	<td><a href="{{site.v4_url}}/data/index.html">Data Management</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/oop/index.html">Object-Oriented Programming</a></td>
+	<td><a href="{{site.v4_url}}/oop/index.html">Object-Oriented Programming</a></td>
       </tr>
     </table>
   </div>
   <div class="medium-6 columns">
     <table class="table table-striped">
       <tr>
-	<td id="invperc"><a href="{{site.github_io_url}}/v4/invperc/index.html">Program Design</a></td>
+	<td id="invperc"><a href="{{site.v4_url}}/invperc/index.html">Program Design</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/make/index.html">Make</a></td>
+	<td><a href="{{site.v4_url}}/make/index.html">Make</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/sysprog/index.html">Systems Programming</a></td>
+	<td><a href="{{site.v4_url}}/sysprog/index.html">Systems Programming</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/spreadsheets/index.html">Spreadsheets</a></td>
+	<td><a href="{{site.v4_url}}/spreadsheets/index.html">Spreadsheets</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/matrix/index.html">Matrix Programming with NumPy</a></td>
+	<td><a href="{{site.v4_url}}/matrix/index.html">Matrix Programming with NumPy</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/matlab/index.html">MATLAB</a></td>
+	<td><a href="{{site.v4_url}}/matlab/index.html">MATLAB</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/media/index.html">Multimedia Programming</a></td>
+	<td><a href="{{site.v4_url}}/media/index.html">Multimedia Programming</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/softeng/index.html">Software Engineering</a></td>
+	<td><a href="{{site.v4_url}}/softeng/index.html">Software Engineering</a></td>
       </tr>
       <tr>
-	<td><a href="{{site.github_io_url}}/v4/essays/index.html">Essays</a></td>
+	<td><a href="{{site.v4_url}}/essays/index.html">Essays</a></td>
       </tr>
     </table>
   </div>
