Adding GAP lesson and notice

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -240,10 +240,16 @@ redirect_from:
     <td><a href="{{site.baseurl}}/team/#wilson.g">Greg Wilson</a></td>
   </tr>
   <tr>
-    <td>Intermediate/advanced R lessons</td>
+    <td>Intermediate/Advanced R Lessons</td>
     <td><a href="http://resbaz.github.io/r-intermediate-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
     <td><a href="https://github.com/resbaz/r-intermediate-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.baseurl}}/team/#ritchie.scott">Scott Ritchie</a></td>
+  </tr>
+  <tr>
+    <td>Programming with GAP</td>
+    <td><a href="http://alex-konovalov.github.io/gap-lesson" target="_blank" class="icon-browser" title="icon-browser"></a></td>
+    <td><a href="https://github.com/alex-konovalov/gap-lesson" target="_blank" class="icon-github" title="icon-github"></a></td>
+    <td>Alex Konovalov</td>
   </tr>
 </table>
 
