adding ashwin srinath as shell-novice maintainer and removing christina koch

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -39,7 +39,7 @@ redirect_from:
     <td><a href="{{site.github_io_url}}/shell-novice/reference.html" target="_blank" class="icon-eye" title="icon-eye"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#devenyi.gabriel">Gabriel Devenyi</a>,
-      <a href="{{site.baseurl}}/team/#koch.christina">Christina Koch</a>
+      <a href="{{site.baseurl}}/team/#srinath_ashwin">Ashwin Srinath</a>
     </td>
   </tr>
   <tr id="git">
