Adding link to Duckles report to reading list

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -35,6 +35,14 @@ redirect_from:
 
   <li>
     <p>
+      Beth Duckles:
+      "<a href="{{site.baseurl}}/files/papers/duckles-instructor-engagement-2016.pdf">Value of Software Carpentry to Instructors</a>",
+      2016
+    </p>
+  </li>
+
+  <li>
+    <p>
       Matthew Gentzkow and Jesse Shapiro:
       "<a href="https://people.stanford.edu/gentzkow/sites/default/files/codeanddata.pdf">Code and Data for the Social Sciences: A Practitioner's Guide.</a>",
       2014.
