Fixing image links to close #276
1. Renaming graphs to include year-month for future disambiguation.
2. Fixed up links.

--- a/pages/about.html
+++ b/pages/about.html
@@ -100,17 +100,17 @@ title: About Us
 
   <div class="medium-4 columns" align="center">
     <h4>Workshops</h4>
-    <img src="{{site.filesurl}}/graphs/workshops.png" alt="Workshop Growth" />
+    <img src="{{site.filesurl}}/graphs/workshops-2015-10.png" alt="Workshop Growth" />
   </div>
 
   <div class="medium-4 columns" align="center">
     <h4>Learners</h4>
-    <img src="{{site.filesurl}}/graphs/learners.png" alt="Learner Growth" />
+    <img src="{{site.filesurl}}/graphs/learners-2015-10.png" alt="Learner Growth" />
   </div>
 
   <div class="medium-4 columns" align="center">
     <h4>Instructors</h4>
-    <img src="{{site.filesurl}}/graphs/instructors.png" alt="Instructor Growth" />
+    <img src="{{site.filesurl}}/graphs/instructors-2015-10.png" alt="Instructor Growth" />
   </div>
 
 </div> <!-- /row -->
