--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -134,15 +134,15 @@ redirect_from:
 <div class="container">
   <div class="row">
     <div class="medium-4 columns" align="center">
-      <img src="{{site/filesurl}}/graphs/learners.png" alt="Learners" class="responsive" width="300" />
+      <img src="{{site/filesurl}}/graphs/learners-2015-10.png" alt="Learners" class="responsive" width="300" />
       <h4>Learners</h4>
     </div>
     <div class="medium-4 columns" align="center">
-      <img src="{{site/filesurl}}/graphs/workshops.png" alt="Workshops" class="responsive" width="300" />
+      <img src="{{site/filesurl}}/graphs/workshops-2015-10.png" alt="Workshops" class="responsive" width="300" />
       <h4>Workshops</h4>
     </div>
     <div class="medium-4 columns" align="center">
-      <img src="{{site/filesurl}}/graphs/instructors.png" alt="Instructors" class="responsive" width="300" />
+      <img src="{{site/filesurl}}/graphs/instructors-2015-10.png" alt="Instructors" class="responsive" width="300" />
       <h4>Instructors</h4>
     </div>
   </div>
